# chinese-checkers-c

./: .gitignore  CMakeLists.txt
cmake/: zig-toolchain-x86_64-linux-gnu.cmake  zig-toolchain-x86_64-windows-gnu.cmake
src/: checkers.c  checkers.h  constants.h  list.h  main.c  search.c  search.h
src/gui/: main.c
tests/: constants.py
